--- a/css/proyectos.css
+++ b/css/proyectos.css
@@ -5,10 +5,12 @@
   letter-spacing: 1px;
   font-family: 'Alfa Slab One', serif;
 }
+
 body {
   background-color: #ffffff;
   height: 100vh;
 }
+
 .rectangulo-negro {
   margin: 0 auto;
   margin-top: 100px;
@@ -20,11 +22,12 @@ body {
   justify-content: center;
   align-items: center;
   background-color: #ffffff;
-  }
+}
 
-  h2 {
-    text-align: center;
-  }
+h2 {
+  text-align: center;
+}
+
 h2 a {
   color: #000000;
   font-weight: 100;
@@ -33,6 +36,7 @@ h2 a {
   text-decoration: none;
   text-align: center;
 }
+
 button {
   border: none;
   cursor: pointer;
@@ -44,20 +48,22 @@ button {
   border: 5px solid black;
   margin: 5px;
 }
- button:hover {
+
+button:hover {
   color: white;
   background-color: #000000;
   border: 5px solid white;
 }
+
 .email-button {
   margin-top: 10px;
 }
 
 .container-buttons {
-background-color: #000000;
-display: flex;
-margin-top: 10px;
-justify-content: center;
+  background-color: #000000;
+  display: flex;
+  margin-top: 10px;
+  justify-content: center;
 
 }
 
@@ -71,8 +77,10 @@ p {
 }
 
 h2 a:hover {
-  font-size: 75px;
+  color: rgb(0, 0, 0); 
+  text-shadow: 4px 4px 4px rgba(0, 0, 0, 0.322);
 }
+
 .cuadrado-negro {
   width: 100vw;
   height: 100vh;
@@ -101,49 +109,54 @@ h2 a:hover {
     transform: translateY(0%);
   }
 }
+
 @media screen and (min-width: 1200px) {
   .rectangulo-negro {
-  margin: 0 auto;
-  height: 44vh;
-  margin-top: 25px;
-  border: 15px solid #000000;
-  width: 60%;
-  padding: 10px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: #ffffff;
-}
-.proyecto p {
-  color: #000000; /* Color del texto descriptivo */
-  text-align: center;
-}
-.cuadrado-negro {
-  width: 100vw;
-  height: 100vh;
-  background-color: black;
-  color: white;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-family: 'Alfa Slab One', serif;
-  font-size: 150px;
-  overflow: hidden;
-  position: fixed; 
-  top: 0; 
-  left: 0;
-  z-index: -1; 
-  pointer-events: none; 
-  user-select: none; 
-}
+    margin: 0 auto;
+    height: 44vh;
+    margin-top: 25px;
+    border: 15px solid #000000;
+    width: 60%;
+    padding: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #ffffff;
+  }
 
-@keyframes mostrarCodigo {
-  0% {
-    transform: translateY(-100%);
+  .proyecto p {
+    color: #000000;
+    /* Color del texto descriptivo */
+    text-align: center;
   }
-  100% {
-    transform: translateY(0%);
+
+  .cuadrado-negro {
+    width: 100vw;
+    height: 100vh;
+    background-color: black;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: 'Alfa Slab One', serif;
+    font-size: 150px;
+    overflow: hidden;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    pointer-events: none;
+    user-select: none;
   }
-}
+
+  @keyframes mostrarCodigo {
+    0% {
+      transform: translateY(-100%);
+    }
+
+    100% {
+      transform: translateY(0%);
+    }
+  }
 
 }
